--- a/final/force-app/main/default/aura/header/header.cmp
+++ b/final/force-app/main/default/aura/header/header.cmp
@@ -10,13 +10,13 @@
         onclick="{! c.home }"/>
     </div>
     <div class="navbar notresponsive" aura:id="navigation">
-      <button aura:id="home" onclick="{! c.home }" class="active">Home</button>
-      <button aura:id="cars" onclick="{! c.cars }">Cars</button>
-      <button aura:id="services" onclick="{! c.services }">Services</button>
-      <button aura:id="question" onclick="{! c.question }">Question</button>
-      <button aura:id="testDrive" onclick="{! c.testDrive }">Test-Drive</button>
+      <button aura:id="home" onclick="{! c.home }" class="active">{!$Label.c.Home}</button>
+      <button aura:id="cars" onclick="{! c.cars }">{!$Label.c.Cars}</button>
+      <button aura:id="services" onclick="{! c.services }">{!$Label.c.Services}</button>
+      <button aura:id="question" onclick="{! c.question }">{!$Label.c.Question}</button>
+      <button aura:id="testDrive" onclick="{! c.testDrive }">{!$Label.c.Order_Test_Drive}</button>
       <div class="select">
-        <label>Currency</label>
+        <label>{!$Label.c.Currency}</label>
         <select aura:id="selected-currency" onchange="{!c.selectCurrency}">
           <option value="USD" >USD</option>
           <option value="BYR" >BYR</option>
@@ -24,13 +24,13 @@
           <option value="EUR" >EUR</option>
         </select>
       </div>
-      <div class="select">
+      <!-- <div class="select">
         <label>Language</label>
         <select aura:id="selected-language">
           <option value="en" onclick="{!c.selectLanguage}">EN</option>
           <option value="ru" onclick="{!c.selectLanguage}">RU</option>
         </select>
-      </div>
+      </div> -->
       <a href="javascript:void(0);" class="icon" onclick="{!c.applyClasses}">
         <i class="fa fa-bars"></i></a>
     </div>
