--- a/final/force-app/main/default/aura/home/home.css
+++ b/final/force-app/main/default/aura/home/home.css
@@ -6,8 +6,7 @@ div.cmp-container.cHome.cMain {
 }
 
 div.cmp-container.cHome.cMain div {
-  display: flex;
-  flex-wrap: wrap;
+  display: block;
   padding: 10px;
   width: 500px;
   max-width: max-content;
