--- a/final/force-app/main/default/aura/modalForCar/modalForCar.css
+++ b/final/force-app/main/default/aura/modalForCar/modalForCar.css
@@ -25,19 +25,19 @@ div.slds-m-around_xx-large.cModalForCar button {
 div.slds-m-around_xx-large.cModalForCar button:hover {
     color: black;
     background-color: whitesmoke;
-    animation: wiggle 2s linear infinite;
+    animation: wiggle 2s linear infinite; 
 }
 
 div.slds-m-around_xx-large.cModalForCar img {
   width: 100%;
   height: 100%;
   max-width: 1110px;
-  max-height: 590px;
+  max-height: 615px;
 }
 
 div.slds-m-around_xx-large.cModalForCar div.bottom-price {
   position: absolute;
-  bottom: 35px;
+  bottom: 65px;
   right: 15px;
   font-size: 58px;
   color: #939393;
@@ -75,9 +75,15 @@ div.slds-m-around_xx-large.cModalForCar div.bottom-price:hover {
   /* For mobile phones: */
   div.slds-m-around_xx-large.cModalForCar img {
     width: 100%;
-    height: 100%;
-    max-width: 815px;
-    max-height: 410px;
+    height: auto;
+    max-height: 545px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  div.slds-m-around_xx-large.cModalForCar div.bottom-price {
+    font-size: 35px;
   }
 }
 
