--- a/final/force-app/main/default/aura/product/product.css
+++ b/final/force-app/main/default/aura/product/product.css
@@ -7,10 +7,10 @@
 div.slds-region_narrow.cProduct {
   display: flex;
   width: 1120px;
-  height: 658px;
+  height: 683px;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 }
 
 div.slds-region_narrow.cProduct p {
@@ -29,8 +29,8 @@ div.slds-region_narrow.cProduct p {
   /* For mobile phones: */
   div.slds-region_narrow.cProduct {
     width: 100%;
-    height: 100%;
-    max-width: 873px;
-    max-height: 453px;
+    height: auto;
+    max-width: 960px;
+    max-height: 615px;
   }
 }
